Changed script src to match changed name

--- a/src/main/resources/static/js/SpecRunner.html
+++ b/src/main/resources/static/js/SpecRunner.html
@@ -15,7 +15,7 @@
   <script src="shopping.js"></script>
 
   <!-- include spec files here... -->
-  <script src="shopping.spec.js"></script>
+  <script src="spec.js"></script>
 
 </head>
 
