Moved jasmine tests so karma can find them

--- a/src/test/js/SpecRunner.html
+++ b/src/test/js/SpecRunner.html
@@ -12,7 +12,7 @@
   <script src="lib/jasmine-3.1.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="shopping.js"></script>
+  <script src="../../main/resources/static/js/shopping.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec.js"></script>
