icon now shows on cart page and order success page

--- a/src/main/resources/static/email-success.html
+++ b/src/main/resources/static/email-success.html
@@ -4,6 +4,8 @@
 	<title>Order Success</title>
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
+	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="/images/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 	<div class="container success confirmation">
